update makefile comments

--- a/unified-hello/makefile
+++ b/unified-hello/makefile
@@ -1,12 +1,12 @@
 #
-# Update the program name and list of libs.
+# Set the program name and set the list of libs.
 #
 
 NAME = demo
 LIBS = yaml-0.1 sqlite3
 
 #
-# In most cases there's no reason to change anything below this.
+# In most cases there's no reason to change any of the following.
 #
 
 CFLAGS = -Wall -Wextra -pedantic -std=c18 $(shell pkg-config --cflags $(LIBS))
